# stm32-examples

./: README.md
basic-blink/: CMakeLists.txt  README.md  basic-blink.ioc
basic-blink/EWARM/: Project.eww  basic-blink.ewd  basic-blink.ewp  stm32h743xx_flash.icf
basic-blink/Src/: stm32h7xx_it.c  user_run.c
i2c-eeprom/: CMakeLists.txt  README.md  i2c-eeprom.ioc
i2c-eeprom/EWARM/: Project.eww  i2c-eeprom.ewd  i2c-eeprom.ewp  stm32h743xx_flash_rw_sram2.icf
i2c-eeprom/Inc/: stm32h7xx_hal_conf.h  user_run.h
i2c-eeprom/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  user_run.c
spi-example/: .gitignore  CMakeLists.txt  README.md  spi-example.ioc
spi-example/EWARM/: .gitignore  Project.eww  spi-example.ewd  spi-example.ewp
spi-example/Inc/: FreeRTOSConfig.h  crc.h  spi_protocol.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  user_run.h
spi-example/Src/: crc32.c  main.c  spi_protocol.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  system_stm32h7xx.c  user_run.c
